fix overflow

--- a/packages/block-editor/src/components/block-list/block-list-item.native.scss
+++ b/packages/block-editor/src/components/block-list/block-list-item.native.scss
@@ -12,5 +12,5 @@
 }
 
 .gridItem {
-	overflow: hidden;
+	overflow: visible;
 }
